fixed text alignment

--- a/cleanup/static/css/feed.css
+++ b/cleanup/static/css/feed.css
@@ -1,4 +1,5 @@
 #feedContainer {
+    text-align: left;
     position: absolute;
     top: 60px;
     right: 20px;
